tests/ui/consts/const_refs_to_static_fail_invalid.stderr
warning: shared reference of mutable static is discouraged
  --> $DIR/const_refs_to_static_fail_invalid.rs:38:30
   |
LL |     const C: &i32 = unsafe { &S_MUT };
   |                              ^^^^^^ shared reference of mutable static
   |
   = note: for more information, see issue #114447 <https://github.com/rust-lang/rust/issues/114447>
   = note: reference of mutable static is a hard error from 2024 edition
   = note: mutable statics can be written to by multiple threads: aliasing violations or data races will cause undefined behavior
   = note: `#[warn(static_mut_ref)]` on by default
help: shared references are dangerous since if there's any kind of mutation of that static while the reference lives, that's UB; use `addr_of!` instead to create a raw pointer
   |
LL |     const C: &i32 = unsafe { addr_of!(S_MUT) };
   |                              ~~~~~~~~~~~~~~~

error[E0080]: it is undefined behavior to use this value
  --> $DIR/const_refs_to_static_fail_invalid.rs:8:5
   |
LL |     const C: &bool = unsafe { std::mem::transmute(&S) };
   |     ^^^^^^^^^^^^^^ constructing invalid value at .<deref>: encountered 0x0a, but expected a boolean
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error: could not evaluate constant pattern
  --> $DIR/const_refs_to_static_fail_invalid.rs:14:9
   |
LL |         C => {}
   |         ^

error[E0080]: it is undefined behavior to use this value
  --> $DIR/const_refs_to_static_fail_invalid.rs:24:5
   |
LL |     const C: &i8 = unsafe { &S };
   |     ^^^^^^^^^^^^ constructing invalid value: encountered reference to `extern` static in `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error: could not evaluate constant pattern
  --> $DIR/const_refs_to_static_fail_invalid.rs:30:9
   |
LL |         C => {}
   |         ^

error[E0080]: it is undefined behavior to use this value
  --> $DIR/const_refs_to_static_fail_invalid.rs:38:5
   |
LL |     const C: &i32 = unsafe { &S_MUT };
   |     ^^^^^^^^^^^^^ constructing invalid value: encountered reference to mutable memory in `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error: could not evaluate constant pattern
  --> $DIR/const_refs_to_static_fail_invalid.rs:46:9
   |
LL |         C => {},
   |         ^

error: aborting due to 6 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
